<resources>
    <string name="app_name">Collage Dashboard Application</string>
    <string name="AddCourseId">id</string>
    <string name="AddCourse">Add Course</string>
    <string name="add_student">Add Student</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="courses">Courses</string>
    <string name="students">Students</string>
    <string name="CourseId">Course ID</string>
    <string name="course_name">Course Name</string>
    <string name="credit_hours">Credit Hours</string>
    <string name="book_title">Book Title</string>
    <string name="add">Add</string>
    <string name="student_name">Student Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="all_students">All Students</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="new_student">New Student</string>
    <string name="new_course">New Course</string>
</resources>